# pysparkit

./: README.md  pyproject.toml
pysparkit/: README.md  __init__.py  converter.py  rdd_helper.py  wrapper.py
pysparkit/incubator/dminer/: __init__.py  ops.py
pysparkit/incubator/helpy/: __init__.py  datetime.py  dict.py  iterator.py  path.py  types.py
pysparkit/io/: __init__.py
pysparkit/lambda_ops/: filter_ops.py  map_ops.py  reduce_ops.py
pysparkit/mining_ops/: __init__.py
pysparkit/op/: map_ops.py
pysparkit/rdd_ops/: __init__.py
test/: reduce_ops_test.py
test/incubator/helpy/: datetime_test.py  iterator_test.py  path_test.py  test_main.py
