[tool.poetry]
name = "pysparkit"
version = "0.1.0"
description = ""
authors = ["innerNULL <lyt697@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true
